horror movie site in react

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Changa+One&family=Creepster&display=swap');
+
 .App {
+  font-family: 'Creepster', sans-serif;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: darkred;
   min-height: 100vh;
+  margin: 0;
+  color: whitesmoke;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  background-color: rgb(180, 16, 16);
+  width: 100%;
+  margin-bottom: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#movie-list-container {
+  width: 100%;
+  background-color: rgb(11, 0, 0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 16px;
+  margin-top: 16px;
+}
+
+.movie-card {
+  width: 225px;
+  background-color: rgb(55, 11, 11);
+  margin: 0 5px 0 5px;
+}
+
+.movie-poster {
+  width: 100%;
+}
+
+.movie-title {
+  color: whitesmoke;
+}
+
+footer>a {
+  text-decoration: none;
+  color: rgb(11, 0, 0);
 }
